@@ -187,20 +187,6 @@ argument_list|,
 name|verifier
 argument_list|)
 expr_stmt|;
-name|out
-operator|.
-name|writeBoolean
-argument_list|(
-literal|true
-argument_list|)
-expr_stmt|;
-name|postOpAttr
-operator|.
-name|serialize
-argument_list|(
-name|out
-argument_list|)
-expr_stmt|;
 if|if
 condition|(
 name|this
@@ -215,9 +201,33 @@ condition|)
 block|{
 name|out
 operator|.
+name|writeBoolean
+argument_list|(
+literal|true
+argument_list|)
+expr_stmt|;
+name|postOpAttr
+operator|.
+name|serialize
+argument_list|(
+name|out
+argument_list|)
+expr_stmt|;
+name|out
+operator|.
 name|writeInt
 argument_list|(
 name|access
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
+name|out
+operator|.
+name|writeBoolean
+argument_list|(
+literal|false
 argument_list|)
 expr_stmt|;
 block|}
