@@ -1720,6 +1720,22 @@ begin_import
 import|import
 name|org
 operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|security
+operator|.
+name|authorize
+operator|.
+name|AuthorizationException
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
 name|jboss
 operator|.
 name|netty
@@ -2503,6 +2519,60 @@ argument_list|,
 name|iug
 argument_list|)
 expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|RemoteException
+name|r
+parameter_list|)
+block|{
+name|LOG
+operator|.
+name|warn
+argument_list|(
+literal|"Exception "
+argument_list|,
+name|r
+argument_list|)
+expr_stmt|;
+name|IOException
+name|io
+init|=
+name|r
+operator|.
+name|unwrapRemoteException
+argument_list|()
+decl_stmt|;
+comment|/**        * AuthorizationException can be thrown if the user can't be proxy'ed.        */
+if|if
+condition|(
+name|io
+operator|instanceof
+name|AuthorizationException
+condition|)
+block|{
+return|return
+operator|new
+name|GETATTR3Response
+argument_list|(
+name|Nfs3Status
+operator|.
+name|NFS3ERR_ACCES
+argument_list|)
+return|;
+block|}
+else|else
+block|{
+return|return
+operator|new
+name|GETATTR3Response
+argument_list|(
+name|Nfs3Status
+operator|.
+name|NFS3ERR_IO
+argument_list|)
+return|;
+block|}
 block|}
 catch|catch
 parameter_list|(
@@ -3919,6 +3989,60 @@ argument_list|,
 name|access
 argument_list|)
 return|;
+block|}
+catch|catch
+parameter_list|(
+name|RemoteException
+name|r
+parameter_list|)
+block|{
+name|LOG
+operator|.
+name|warn
+argument_list|(
+literal|"Exception "
+argument_list|,
+name|r
+argument_list|)
+expr_stmt|;
+name|IOException
+name|io
+init|=
+name|r
+operator|.
+name|unwrapRemoteException
+argument_list|()
+decl_stmt|;
+comment|/**        * AuthorizationException can be thrown if the user can't be proxy'ed.        */
+if|if
+condition|(
+name|io
+operator|instanceof
+name|AuthorizationException
+condition|)
+block|{
+return|return
+operator|new
+name|ACCESS3Response
+argument_list|(
+name|Nfs3Status
+operator|.
+name|NFS3ERR_ACCES
+argument_list|)
+return|;
+block|}
+else|else
+block|{
+return|return
+operator|new
+name|ACCESS3Response
+argument_list|(
+name|Nfs3Status
+operator|.
+name|NFS3ERR_IO
+argument_list|)
+return|;
+block|}
 block|}
 catch|catch
 parameter_list|(
@@ -11061,6 +11185,60 @@ argument_list|,
 literal|0
 argument_list|)
 return|;
+block|}
+catch|catch
+parameter_list|(
+name|RemoteException
+name|r
+parameter_list|)
+block|{
+name|LOG
+operator|.
+name|warn
+argument_list|(
+literal|"Exception "
+argument_list|,
+name|r
+argument_list|)
+expr_stmt|;
+name|IOException
+name|io
+init|=
+name|r
+operator|.
+name|unwrapRemoteException
+argument_list|()
+decl_stmt|;
+comment|/**        * AuthorizationException can be thrown if the user can't be proxy'ed.        */
+if|if
+condition|(
+name|io
+operator|instanceof
+name|AuthorizationException
+condition|)
+block|{
+return|return
+operator|new
+name|FSSTAT3Response
+argument_list|(
+name|Nfs3Status
+operator|.
+name|NFS3ERR_ACCES
+argument_list|)
+return|;
+block|}
+else|else
+block|{
+return|return
+operator|new
+name|FSSTAT3Response
+argument_list|(
+name|Nfs3Status
+operator|.
+name|NFS3ERR_IO
+argument_list|)
+return|;
+block|}
 block|}
 catch|catch
 parameter_list|(
